# bitpiece_svd

./: Cargo.toml  esp32c3.svd
src/: generate.rs  ident.rs  main.rs  name.rs  svd_ir.rs
