[package]
name = "bitpiece_svd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
heck = "0.5.0"
newtype-ops = "0.1.4"
num-traits = "0.2.19"
parse_int = "0.9.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.105"
quick-xml = { version = "0.39.0", features = ["overlapped-lists", "serialize"] }
quote = "1.0.43"
serde = { version = "1.0.228", features = ["derive"] }
sorted-vec = "0.8.10"
syn = { version = "2.0.114", features = ["full", "extra-traits", "parsing"] }
