[package]
name = "bitpiece_svd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
prettyplease = "0.2"
svd-parser = { version = "0.14", features = ["expand"] }
